[package]
name = "mintbase-deps"
version = "0.1.0"
edition = "2018"
authors = [
    "evergreen-trading-systems <4870868+evergreen-trading-systems@users.noreply.github.com>",
]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "3.0.0-beta.2", optional = true }
near-sdk = { version = "4.1.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
ed25519-dalek = "1.0.0"

[dependencies.near_events]
git = "https://github.com/mintbase/near-events"
rev = "bd78dcaeaa11f6f6286bbbed97d835370783c30b"

[features]
ser = ["near_events/ser"]
de = ["near_events/de"]
store-wasm = ["wasm"]
factory-wasm = ["wasm"]
market-wasm = ["wasm"]
helper-wasm = ["wasm"]
test = ["clap", "all"]
wasm = ["near-sdk", "ser", "serde_json/arbitrary_precision"]
all = ["wasm", "de"]
